--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  ez_localization: ^1.0.0+2
+  another_flushbar: ^1.10.28
+  intl: ^0.17.0
+  dio: ^4.0.4
+  flutter_keyboard_visibility: ^5.2.0
+  keyboard_dismisser: ^2.0.1
   cupertino_icons: ^1.0.2
   http: ^0.13.3
   cached_network_image: ^3.2.0
